postgres/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: postgres.sximada
spec:
  rules:
    - host: postgres.sximada
      http:
        paths:
        - path: /
          backend:
            serviceName: postgres
            servicePort: 5432
